add: login activity layout :rocket:

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Moru</string>
+    <string name="login_acc">Login to Your\nAccount</string>
+    <string name="no_acc">Don’t have an account?</string>
+    <string name="register">Register Now</string>
+    <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 </resources>
