--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,6 @@
     <string name="title_routines">Routines</string>
     <string name="title_stat">Stat</string>
     <string name="title_profile">Profile</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_dashboard">Dashboard</string>
@@ -31,4 +30,12 @@
     <string name="subscription">Subscription</string>
     <string name="logout">Logout</string>
     <string name="image_profile">image profile</string>
+    <string name="add_routines">Add Routines</string>
+    <string name="routine_name">Routine Name</string>
+    <string name="routine_time">Routine Time</string>
+    <string name="status_not_started">Not Started</string>
+    <string name="status_completed">Completed</string>
+    <string name="status_skipped">Skipped</string>
+
+
 </resources>
