--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,10 @@
     <string name="status_not_started">Not Started</string>
     <string name="status_completed">Completed</string>
     <string name="status_skipped">Skipped</string>
-
+    <string name="category_default">Category</string>
+    <string name="more_info">More Info</string>
+    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur. Egestas purus volutpat varius neque eros eleifend blandit et elit. Augue mattis eget laoreet diam pretium sed gravida ut nequ</string>
+    <string name="image_routine">Image Routine</string>
+    <string name="to_detail_routines">To Detail Routines</string>
 
 </resources>
