--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,13 +44,16 @@
     <string name="good_morning">Good Morning</string>
     <string name="waving_hand">Waving Hand</string>
     <string name="title_activity_alarm">AlarmActivity</string>
-    <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-
+    <string name="title_activity_pick_routine">PickRoutineActivity</string>
+    <string name="pick_routine">Pick Routine</string>
+    <string name="search">Search</string>
+    <string name="choose">Choose</string>
+    <string name="exercise">Exercise</string>
+    <string name="read">Read</string>
 </resources>
