--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,8 @@
     <string name="fill_field">Please fill every field</string>
     <string name="wrong_credential">Wrong email or password</string>
     <string name="register_success">Register success</string>
+    <string name="password_not_match">Password is not match</string>
+
     <string name="register_failed">Register failed</string>
     <string name="are_you_sure">Are you sure want to</string>
     <string name="dialog_logout">logout</string>
