fix: routine response :hammer:

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,4 +126,5 @@
 
     <string name="retry">Reload</string>
     <string name="failed_load_data">Failed to load data</string>
+    <string name="routine_image">Routine Image</string>
 </resources>
