--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,4 +128,6 @@
     <string name="failed_load_data">Failed to load data</string>
     <string name="routine_image">Routine Image</string>
     <string name="exercise_description">Exercise Description</string>
+    <string name="post_schedule_success">New routine schedule is added</string>
+    <string name="post_schedule_failed">New routine is failed to be added</string>
 </resources>
