--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,8 +99,8 @@
     <string name="book_description">Book Description</string>
     <string name="start_this_routine">Start This Routine</string>
     <string name="default_pages">0 pages</string>
-    <string name="average_duration">Average Duration</string>
-    <string name="default_duration">10 minutes</string>
+    <string name="average_duration">Optimal Duration</string>
+    <string name="default_duration">%s minutes</string>
     <string name="add_routine">Add Routine</string>
     <string name="wrong_email_format">Wrong email format</string>
     <string name="wrong_password_format">Password length must at least 8 character </string>
@@ -111,7 +111,7 @@
     <string name="register_failed">Register failed</string>
     <string name="are_you_sure">Are you sure want to</string>
     <string name="dialog_logout">logout</string>
-    <string name="yes">YES</string>
+    <string name="yes">Yes</string>
     <string name="no">no</string>
     <string name="question_mark">\?</string>
     <string name="morning_routines">morning routines</string>
@@ -141,4 +141,7 @@
     <string name="name_your_favorite_exercise">Name Your Favorite Exercise (Pick One)</string>
     <string name="release_date">Release Date</string>
     <string name="default_release_date">2000</string>
+    <string name="location">Location</string>
+    <string name="default_location">Indoor</string>
+    <string name="equipment">Equipment</string>
 </resources>
